# tykar

./: compose.yml
.woodpecker/: front.yaml  (+3 more)
back/: .env  Cargo.toml  Dockerfile  README.md  mix.exs
back/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
back/lib/: back.ex  back_web.ex  tykar.ex  tykar_web.ex
back/lib/back/: accounts.ex  application.ex  mailer.ex  repo.ex
back/lib/back/accounts/: user.ex  user_notifier.ex  user_token.ex
back/lib/back_web/: api_spec.ex  endpoint.ex  router.ex  schemas.ex  telemetry.ex  user_auth.ex
back/lib/back_web/controllers/: changeset_json.ex  error_json.ex  fallback_controller.ex  user_confirmation_controller.ex  user_registration_controller.ex  user_reset_password_controller.ex  user_session_controller.ex  user_settings_controller.ex
back/lib/tykar/: accounts.ex  application.ex  game.ex  games.ex  mailer.ex  release.ex  repo.ex
back/lib/tykar/accounts/: user.ex  user_notifier.ex  user_token.ex
back/lib/tykar/game/: card.ex  dice_poker.ex  gen_game_server.ex  makao.ex  seat.ex
back/lib/tykar/games/: dice_poker.ex  makao.ex  seat.ex
back/lib/tykar_web/: api_spec.ex  endpoint.ex  router.ex  schemas.ex  telemetry.ex  user_auth.ex
back/migrations/: 20240912175120_create_users_table.sql
back/priv/repo/: seeds.exs
back/src/: auth.rs  main.rs
back/test/: test_helper.exs
back/test/back/: accounts_test.exs
back/test/back_web/: user_auth_test.exs
back/test/support/: channel_case.ex  conn_case.ex  data_case.ex
back/test/tykar/: accounts_test.exs
back/test/tykar_web/: user_auth_test.exs
(+135 files in other folders)
