[package]
name = "tykar-backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.88"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.5"
axum-extra = { version = "0.9.4", features = ["cookie"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = "5.0.0-beta.0"
utoipa-axum = "0.1.0-beta.2"
utoipa-swagger-ui = { version = "7.1.1-beta.0", features = ["axum"] }
uuid = "1.10.0"
